# rapportage_downloader

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md  compose.yaml
.github/workflows/: rust.yml
examples/: downloading_reports.rs
src/: ean.rs  id.rs  lib.rs  login.rs  main.rs  report.rs
