[package]
name = "rapportage_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
reqwest = "0.11.22"
scraper = "0.18.1"
serde = "1.0.192"
serde_json = "1.0.108"
serde_urlencoded = "0.7.1"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
url = "2.4.1"
