[package]
name = "rapportage_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["cookies", "multipart"] }
scraper = "0.18"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "fs"] }
url = "2.4"
